# boinchub

./: .dockerignore  .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  app.json  devbox.json  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json  renovate.json
.github/: renovate.json
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 2d58f8ffc51a_create_initial_database.py  7023df707a28_add_additional_indexes.py  aa0c01e688a2_add_vacation_override_setting_to_.py  b1ad875e4791_add_invite_codes.py
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a9efe93f82e_add_super_admin_role.py  0b63512c7017_create_user_sessions.py  2f313d453572_use_timezone_aware_datetime_for_last_.py  4ce5569175a5_migrate_account_keys_to_no_longer_be_.py  994aad955dfc_encrypt_account_keys.py  cbb27e63e213_add_last_connection_tracking_to_.py  e49fdb0c3016_add_preference_groups.py  fa92293bd7f5_switch_to_timezone_aware_timestamp_.py
backend/boinchub/: __init__.py
backend/boinchub/api/endpoints/: auth.py  computers.py  config.py  health.py  preference_groups.py  project_attachments.py  projects.py  rpc.py  user_project_keys.py  users.py
backend/boinchub/cli/: admin.py
backend/boinchub/core/: __init__.py  auth.py  database.py  middleware.py  security.py  settings.py  utils.py  xmlrpc.py
backend/boinchub/models/: __init__.py  computer.py  invite_code.py  preference_group.py  project.py  project_attachment.py  user.py  user_project_key.py  user_session.py
backend/boinchub/services/: __init__.py  account_service.py  boinc_service.py  computer_service.py  preference_group_service.py  project_attachment_service.py  project_service.py  session_service.py  user_service.py
backend/boinchub/tasks/: __init__.py
frontend/: .env  .env.production  .prettierrc  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/common/: AttachmentStatusDisplay.tsx  AuthProvider.tsx  ConfigProvider.tsx  ResourceUsageDisplay.tsx
frontend/src/components/layout/: AppLayout.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/components/settings/: ProjectKeysManagement.tsx  SessionManagement.tsx
frontend/src/contexts/: AuthContext.tsx  ConfigContext.tsx
frontend/src/hooks/: useAuthImpl.ts  usePageTitle.ts
frontend/src/hooks/queries/: index.ts  queryKeys.ts  useAttachmentQueries.ts  useAuthQueries.ts  useComputerQueries.ts  useConfigQueries.ts  useInviteCodeQueries.ts  usePreferenceGroupQueries.ts  useProjectQueries.ts  useSessionQueries.ts  useUserProjectKeyQueries.ts  useUserQueries.ts
frontend/src/pages/admin/: InviteCodesPage.tsx  ProjectsPage.tsx  UsersPage.tsx
frontend/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/user/: AttachmentDetailPage.tsx  ComputerDetailPage.tsx  ComputersPage.tsx  DashboardPage.tsx  PreferenceGroupEditPage.tsx  PreferenceGroupsPage.tsx  SettingsPage.tsx
frontend/src/services/: api-client.ts  attachment-service.ts  computer-service.ts  config-service.ts  invite-code-service.ts  preference-group-service.ts  project-service.ts  session-service.ts  token-storage.ts  user-project-key-service.ts  user-service.ts
frontend/src/types/: index.ts
frontend/src/util/: date.ts  error.ts  user.ts
src/boinchub/: __about__.py  __init__.py  main.py
src/boinchub/api/: __init__.py
src/boinchub/api/endpoints/: __init__.py  auth.py  boinc.py  computers.py  config.py  invite_codes.py  project_attachments.py  project_config.py  projects.py  rpc.py  user_project_keys.py  users.py
src/boinchub/cli/: __init__.py  admin.py
src/boinchub/core/: database.py  encryption.py  middleware.py  security.py  settings.py  utils.py  xmlrpc.py
src/boinchub/models/: __init__.py  computer.py  invite_code.py  preference_group.py  project.py  project_attachment.py  user.py  user_project_key.py  user_session.py  util.py
src/boinchub/services/: account_service.py  base_service.py  boinc_service.py  computer_service.py  invite_code_service.py  preference_group_service.py  project_attachment_service.py  project_service.py  session_service.py  user_project_key_service.py  user_service.py
src/boinchub/tasks/: user_session.py
