[project]
name = "boinchub"
description = "A BOINC account manager intended for personal use."
readme = "README.md"
requires-python = ">=3.13.0"
license = "MIT"
authors = [{ name = "Jason Lynch", email = "jason@aexoden.com" }]
dependencies = [
  "alembic>=1.17.0",
  "argon2-cffi>=25.1.0",
  "cryptography>=46.0.3",
  "fastapi[standard]>=0.120.0",
  "lxml>=6.0.2",
  "packaging>=25.0",
  "psycopg2>=2.9.11",
  "pydantic>=2.12.3",
  "pydantic-settings>=2.12.0",
  "pydantic-xml>=2.18.0",
  "python-jose[cryptography]>=3.5.0",
  "sqlmodel>=0.0.27",
  "types-lxml>=2025.11.25",
  "user-agents>=2.2.0",
]
dynamic = ["version"]

[project.scripts]
boinchub = "boinchub:main"
boinchub-admin = "boinchub.cli.admin:main"

[dependency-groups]
dev = ["ruff>=0.14.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/boinchub/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/boinchub"]

[tool.ruff]
exclude = ["alembic"]
line-length = 120

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["COM812", "D203", "D213", "ISC001", "TC001", "TC002", "TC003"]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "(?i)SPDX-FileCopyrightText: \\d{4}"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "pydantic_xml.BaseXmlModel"
]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "pep257"
