[project]
name = "boinchub"
description = "A BOINC account manager intended for personal use."
readme = "README.md"
requires-python = ">=3.14.3"
license = "MIT"
authors = [{ name = "Jason Lynch", email = "jason@aexoden.com" }]
dependencies = [
  "alembic>=1.18.4",
  "argon2-cffi>=25.1.0",
  "cryptography>=46.0.5",
  "fastapi[standard]>=0.129.2",
  "lxml>=6.0.2",
  "packaging>=26.0",
  "psycopg2>=2.9.11",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "pydantic-xml>=2.19.0",
  "python-jose[cryptography]>=3.5.0",
  "sqlmodel>=0.0.33",
  "types-lxml>=2026.2.16",
  "ua-parser[regex]>=1.0.1",
]
dynamic = ["version"]

[project.scripts]
boinchub = "boinchub.main:run"
boinchub-admin = "boinchub.cli.admin:main"

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "ruff>=0.15.2",
  "types-python-jose>=3.5.0.20250531",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/boinchub/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/boinchub"]

[tool.mypy]
exclude = ["alembic"]
strict = true

[tool.ruff]
exclude = ["alembic"]
line-length = 120

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "COM812",  # missing-trailing-comma (conflicts with ruff's formatter)
]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "(?i)SPDX-FileCopyrightText: \\d{4}"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "pydantic_xml.BaseXmlModel",
  "sqlmodel.SQLModel"
]
runtime-evaluated-decorators = [
  "fastapi.APIRouter.delete",
  "fastapi.APIRouter.get",
  "fastapi.APIRouter.patch",
  "fastapi.APIRouter.post"
]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.uv]
exclude-dependencies = [
  "ecdsa",  # required until https://github.com/mpdavis/python-jose/issues/390 is resolved
]
